app-video-wear-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-video-svc
  namespace: sun
spec:
  selector:
    app: nginx-video
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-wear-svc
  namespace: sun
spec:
  selector:
    app: nginx-wear
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
