ingress.yaml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: sun
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - path: /wear
        pathType: Prefix
        backend:
          service:
            name: nginx-wear-svc
            port:
              number: 80
      - path: /video
        pathType: Prefix
        backend:
          service:
            name: nginx-video-svc
            port:
              number: 80
